--- a/_includes/scripts/mathjax.liquid
+++ b/_includes/scripts/mathjax.liquid
@@ -3,12 +3,9 @@
     <!-- MathJax -->
     <script type="text/javascript">
       window.MathJax = {
-          tex: {
-            packages: ['base', 'ams']
-          },
-          loader: {
-            load: ['ui/menu', '[tex]/ams']
-          },
+        tex: {
+          tags: 'ams',
+        },
       };
     </script>
     <script
